--- a/fend/src/style/common.css
+++ b/fend/src/style/common.css
@@ -44,6 +44,7 @@ h3 {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    margin-left: 20px;
     margin-top: 20px;
 }
 
@@ -61,6 +62,7 @@ h3 {
     padding-left: 20px;
     width: -webkit-fill-available;
     justify-content: space-between;
+    flex-direction: column;
 }
 
 .first-list,
@@ -68,6 +70,15 @@ h3 {
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.first-list {
+    height: 70%;
+    justify-content: space-between;
+}
+
+.second-list {
+    margin-bottom: 20px !important;
 }
 
 .iconsec {
@@ -78,10 +89,14 @@ h3 {
 
 .conversation-list {
     display: flex;
-    width: 100%;
     flex-direction: column;
     align-items: center;
     overflow: auto;
+    margin-bottom: 20px !important;
+    padding: 0 !important;
+    margin-top: 20px !important;
+    color: rgba(0, 0, 0, 0);
+    transition: color .3s ease;
 
 }
 
@@ -126,9 +141,16 @@ h3 {
     color: var(--username) !important;
 }
 
-.navbar-chat {
+.navbar-chat-container {
     display: flex;
     height: 52px;
+    width: 100%;
+    justify-content: space-between;
+    margin-bottom: 20px;
+}
+
+.navbar-chat {
+    display: flex;
     align-items: center;
 }
 
@@ -138,4 +160,82 @@ h3 {
 
 .online {
     color: var(--online);
+}
+
+.menu-chat {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: 20px;
+}
+
+.menu-chat-item {
+    width: 50px;
+    display: flex;
+    justify-content: center;
+}
+
+.brandapp {
+    height: 60px;
+    display: flex;
+    margin-bottom: 35px;
+}
+
+
+/* Scroll bar */
+
+*::-webkit-scrollbar,
+*::-webkit-scrollbar-thumb {
+    height: 50px;
+    width: 25px;
+    border-radius: 15px;
+    background-clip: padding-box;
+    border: 10px solid transparent;
+}
+
+*::-webkit-scrollbar-thumb {
+    box-shadow: inset 0 0 0 10px;
+}
+
+.conversation-list:hover {
+    color: var(--red)
+}
+
+.chat {
+    height: 100%;
+    background-color: var(--light-grey);
+    border-radius: 10px;
+    margin-right: 20px;
+    margin-bottom: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.navbar-messaging {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 80px;
+}
+
+.send-icon,
+.send-options {
+    margin-left: 20px;
+    margin-right: 20px;
+    display: flex;
+
+}
+
+.send-message {
+    width: -webkit-fill-available;
+}
+
+.css-1x51dt5-MuiInputBase-input-MuiInput-input {
+    color: var(--white-grey) !important;
+}
+
+.css-1tcs2i1-MuiInputBase-root-MuiInput-root:before,
+.css-1tcs2i1-MuiInputBase-root-MuiInput-root:after {
+    border-bottom: 2px solid var(--red) !important;
 }
