--- a/fend/src/style/common.css
+++ b/fend/src/style/common.css
@@ -266,6 +266,12 @@ h4 {
     color: var(--white-grey) !important;
 }
 
+
+.css-1up7ebe::after:before,
+.css-1up7ebe::after:after {
+    border-bottom: 2px solid var(--red) !important;
+}
+
 .css-1tcs2i1-MuiInputBase-root-MuiInput-root:before,
 .css-1tcs2i1-MuiInputBase-root-MuiInput-root:after {
     border-bottom: 2px solid var(--red) !important;
@@ -338,7 +344,7 @@ h4 {
 }
 
 .send-photo {
-    width: 260px;
+    width: 100%;
 }
 
 .epr-search {
@@ -351,6 +357,11 @@ h4 {
 
 .css-1poimk-MuiPaper-root-MuiMenu-paper-MuiPaper-root-MuiPopover-paper {
     background-color: var(--container-mesage) !important;
+}
+
+.css-177ic5c {
+    background-color: var(--container-mesage) !important;
+    top: 485px !important;
 }
 
 .css-1uwgr7b-MuiTypography-root {
