--- a/fend/src/style/common.css
+++ b/fend/src/style/common.css
@@ -355,6 +355,10 @@ h4 {
     top: -100px !important;
 }
 
+.css-1sucic7 {
+    top: -355px !important;
+}
+
 .css-1poimk-MuiPaper-root-MuiMenu-paper-MuiPaper-root-MuiPopover-paper {
     background-color: var(--container-mesage) !important;
 }
