--- a/fend/src/style/common.css
+++ b/fend/src/style/common.css
@@ -280,8 +280,8 @@ h4 {
 }
 
 
-.css-1up7ebe::after:before,
-.css-1up7ebe::after:after {
+.css-1up7ebe:after:before,
+.css-1up7ebe:after:after {
     border-bottom: 2px solid var(--red) !important;
 }
 
