--- a/fend/src/style/common.css
+++ b/fend/src/style/common.css
@@ -46,6 +46,7 @@ h3 {
     color: var(--extra-light-grey);
 }
 
+.custom-red-default-icon,
 .custom-red-icon {
     color: var(--red);
 }
@@ -65,22 +66,23 @@ h3 {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    margin-left: 20px;
-    margin-top: 20px;
+    margin-top: 30px;
+    width: 120px;
+
 }
 
 .storie-section-container {
     display: flex;
     max-width: 480px;
     flex-direction: column;
-    margin-top: 20px;
+    margin-top: 30px;
     margin-left: 50px;
 }
 
 .chat-section-container {
     box-sizing: border-box;
     display: flex;
-    margin-top: 20px;
+    margin-top: 30px;
     padding-left: 20px;
     width: 10px;
     flex: 1;
@@ -106,9 +108,10 @@ h3 {
 }
 
 .iconsec {
-    height: 50px;
+    height: 60px;
     display: flex;
     align-items: center;
+    width: 100%;
 }
 
 .conversation-list {
@@ -204,6 +207,8 @@ h3 {
     height: 60px;
     display: flex;
     margin-bottom: 35px;
+    position: relative;
+    left: -10px;
 }
 
 
@@ -392,4 +397,36 @@ a:hover {
 .searchat::before {
     border-bottom: 2px solid transparent !important;
     padding: 0;
+}
+
+.pulse {
+    display: block;
+    border-radius: 50%;
+    cursor: pointer;
+    animation: pulse 2s infinite;
+}
+
+.pulse:hover {
+    animation: none;
+}
+
+@keyframes pulse {
+    0% {
+        -moz-box-shadow: 0 0 0 0 rgba(196, 18, 18, 0.4);
+        box-shadow: 0 0 0 0 rgba(196, 18, 18, 0.627);
+    }
+
+    70% {
+        -moz-box-shadow: 0 0 0 10px rgba(194, 14, 14, 0);
+        box-shadow: 0 0 0 10px rgba(194, 14, 14, 0);
+    }
+
+    100% {
+        -moz-box-shadow: 0 0 0 0 rgba(255, 0, 0, 0);
+        box-shadow: 0 0 0 0 rgba(255, 0, 0, 0);
+    }
+}
+
+.active {
+    background-color: var(--light-grey) !important;
 }
