--- a/fend/src/style/small-device.css
+++ b/fend/src/style/small-device.css
@@ -23,14 +23,17 @@
         display: none;
     }
 
-    .custom-red-icon {
+    .custom-red-default-icon {
         position: fixed;
         bottom: 0;
         right: 0;
         margin-right: 15px;
         margin-bottom: 15px;
         z-index: 1;
+        width: 70px;
+        height: 70px;
     }
+
 
     .search-input {
         margin-right: 20px !important;
