--- a/fend/src/style/common.css
+++ b/fend/src/style/common.css
@@ -60,6 +60,7 @@ h3 {
     display: flex;
     width: 100%;
     height: 100%;
+    overflow-x: clip;
 }
 
 .sidebar-container {
@@ -112,6 +113,7 @@ h3 {
     display: flex;
     align-items: center;
     width: 100%;
+    justify-content: center;
 }
 
 .conversation-list {
