--- a/fend/src/style/common.css
+++ b/fend/src/style/common.css
@@ -478,3 +478,64 @@ a:hover {
     width: 100% !important;
     height: 100% !important;
 }
+
+
+.loading {
+    display: flex;
+    justify-content: center;
+    height: -webkit-fill-available;
+    align-items: center;
+}
+
+.spinner {
+    width: 5.75em;
+    transform-origin: center;
+    animation: rotate 2s linear infinite;
+}
+
+circle {
+    fill: none;
+    stroke: var(--red);
+    stroke-width: 2;
+    stroke-dasharray: 1, 200;
+    stroke-dashoffset: 0;
+    stroke-linecap: round;
+    animation: dash 1.5s ease-in-out infinite;
+}
+
+@keyframes rotate {
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+@keyframes dash {
+    0% {
+        stroke-dasharray: 1, 200;
+        stroke-dashoffset: 0;
+    }
+
+    50% {
+        stroke-dasharray: 90, 200;
+        stroke-dashoffset: -35px;
+    }
+
+    100% {
+        stroke-dashoffset: -125px;
+    }
+}
+
+.css-z2of7l-MuiPaper-root-MuiMenu-paper-MuiPaper-root-MuiPopover-paper {
+    top: 545px !important;
+    left: 55px !important;
+    color: var(--username) !important;
+    background-color: var(--light-grey) !important;
+}
+
+.swal-modal {
+    background-color: var(--red);
+}
+
+.swal-button {
+    display: none;
+}
