--- a/fend/src/style/common.css
+++ b/fend/src/style/common.css
@@ -468,10 +468,10 @@ a:hover {
 
 .iziModal,
 .iziModal-wrap,
-.iziModal .iziModal-content {
-    max-height: 500px !important;
+.iziModal,
+.iziModal-content {
     max-width: 600px !important;
-    height: auto !important;
+    height: 100% !important;
 }
 
 .strphotostr {
@@ -526,10 +526,9 @@ circle {
 }
 
 .css-z2of7l-MuiPaper-root-MuiMenu-paper-MuiPaper-root-MuiPopover-paper {
-    top: 545px !important;
-    left: 55px !important;
     color: var(--username) !important;
     background-color: var(--light-grey) !important;
+    width: 18%;
 }
 
 .swal-modal {
@@ -538,4 +537,105 @@ circle {
 
 .swal-button {
     display: none;
+}
+
+.default-chat-state {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+}
+
+.default-advice {
+    /*  position: absolute;
+    top: 230px;
+    width: 250px;
+    left: 70px;*/
+    color: var(--extra-light-grey);
+    line-height: 2;
+}
+
+.a_tag-new-chat {
+    color: var(--red) !important;
+    text-decoration: none !important;
+}
+
+.a_tag-new-chat::before {
+    content: '';
+    position: absolute;
+    left: 72%;
+    bottom: 0;
+    width: 50%;
+    height: 2px;
+    background-color: var(--red) !important;
+    transform-origin: center;
+    transform: translate(-50%, 0) scaleX(0);
+    transition: transform 0.3s ease-in-out;
+}
+
+.a_tag-new-chat:hover::before {
+    transform: translate(-50%, 0) scaleX(1);
+}
+
+.new-chat-form {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin: 30px 100px;
+}
+
+/* defines the namespace for the xlink*/
+@namespace xlink "http://www.w3.org/1999/xlink";
+
+/* a stile for all the a elements in the document*/
+a {
+    text-decoration: underline;
+}
+
+/*Styling only the a elements in the svg*/
+a[xlink|href] {
+    text-decoration: none;
+}
+
+.pick-u-header {
+    display: flex;
+    justify-content: space-between;
+    margin: 30px 50px 10px 50px;
+}
+
+.user-to-pick {
+    display: flex !important;
+    padding: 0 !important;
+    width: auto !important;
+    margin: 10px 50px !important;
+    align-items: center !important;
+    justify-content: space-between !important;
+    text-align: -webkit-center !important;
+}
+
+.checkbox-round {
+    width: 1.3em;
+    height: 1.3em;
+    background-color: #686868;
+    border-radius: 50%;
+    vertical-align: middle;
+    -webkit-appearance: none;
+    outline: none;
+    cursor: pointer;
+}
+
+.checkbox-round:checked {
+    background-color: var(--red);
+}
+
+/*.iziModal-wrap {
+    overflow-y: auto !important;
+    overflow-x: hidden !important;
+}*/
+
+.lst-utp {
+    max-height: 370px !important;
+    overflow-y: auto !important;
+    overflow-x: hidden !important;
 }
