--- a/fend/src/style/small-device.css
+++ b/fend/src/style/small-device.css
@@ -5,6 +5,8 @@
 
     .sidebar-container {
         flex-direction: row;
+        width: 100%;
+        padding-left: 20px;
     }
 
     .storie-section-container {
@@ -13,6 +15,8 @@
 
     .first-list {
         flex-direction: row;
+        align-items: initial;
+        width: 100%;
     }
 
     .second-list {
